# pyzabbix

./: .gitignore  .hgtags  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.markdown  README.md  docker-compose.yml  pyproject.toml  pyzabbix-verify_ssl  setup.py
.chglog/: CHANGELOG.md.tpl  config.yml
.github/: release-please-config.json
.github/workflows/: ci.yml  release-please.yml
e2e/: api_test.py  conftest.py  e2e_test.py  sender_test.py
examples/: add_item.py  additemcsv.py  current_issues.py  export_history_csv.py  fix_host_ips.py  history_data.py  hosts_delete  import_templates.py  timeout.py  trend_data.py  with_context.py  zabbix_item_add_example.py  zabbix_rpc_test.py
packaging/rpm/: python-pyzabbix.spec
pyzabbix/: __init__.py  _api.py  _version.py  api.py  logger.py  sender.py
scripts/: release.sh
tests/: api_test.py  pyzabbix_test.py  sender_test.py  test_api.py  version_test.py
