[tool.pylint.messages_control]
disable = [
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
]

[tool.pylint.format]
disable = "logging-fstring-interpolation"

[tool.mypy]
allow_redefinition = true
disallow_incomplete_defs= true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
